[CA] Update study guide [skip ci]

--- a/src/Study/CS/Computer Architecture.html
+++ b/src/Study/CS/Computer Architecture.html
@@ -41,35 +41,28 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-<a href="Computer Architecture.html#TODO">TODO</a>
-
-</li><li>
 <a href="Computer Architecture.html#Resources">Resources</a>
+
+<ul>
+<li>
+<a href="Computer Architecture.html#Computer%20Systems%3A%20A%20Programmer%27s%20Perspective">Computer Systems  A Programmer s Perspective</a>
 
 </li><li>
 <a href="Computer Architecture.html#Nand2Tetris">Nand2Tetris</a>
 
-</li><li>
-<a href="Computer Architecture.html#Computer%20Systems%3A%20A%20Programmer%27s%20Perspective">Computer Systems  A Programmer s Perspective</a>
-
+</li></ul>
 </li></ul>
 <hr>
 
-<div id="Computer Architecture-TODO"><h3 id="TODO" class="header"><a href="#Computer Architecture-TODO"><span class="todo">TODO</span></a></h3></div>
+<div id="Resources"><h2 id="Resources" class="header"><a href="#Resources">Resources</a></h2></div>
 
-<ul>
-<li class="done0">
-Nand2Tetris
+<div id="Resources-Computer Systems: A Programmer's Perspective"><h3 id="Computer Systems: A Programmer's Perspective" class="header"><a href="#Resources-Computer Systems: A Programmer's Perspective">Computer Systems: A Programmer's Perspective</a></h3></div>
 
-</li><li class="done0">
-Computer Systems: A Programmer's Perspective
+<p>
+Most courses go from chapter 1 to 6. Do <a href="https://www.cs.cmu.edu/~213/">this course</a>
+</p>
 
-</li></ul>
-<hr>
-
-<div id="Computer Architecture-Resources"><h3 id="Resources" class="header"><a href="#Computer Architecture-Resources">Resources</a></h3></div>
-
-<div id="Computer Architecture-Resources-Nand2Tetris"><h4 id="Nand2Tetris" class="header"><a href="#Computer Architecture-Resources-Nand2Tetris">Nand2Tetris</a></h4></div>
+<div id="Resources-Nand2Tetris"><h3 id="Nand2Tetris" class="header"><a href="#Resources-Nand2Tetris">Nand2Tetris</a></h3></div>
 
 <p>
 Each chapter involves building a small piece of the overall system, from writing elementary logic gates in HDL, through a CPU and assembler, all the way to an application the size of a Tetris game.
@@ -77,29 +70,6 @@ Each chapter involves building a small piece of the overall system, from writing
 
 <p>
 <a href="http://www.nand2tetris.org/">The Elements of Computing Systems (Nand2Tetris)</a>
-</p>
-
-
-<ul>
-<li>
-<a href="https://www.coursera.org/learn/build-a-computer">Part I: Hardware course on Coursera</a>
-
-</li><li>
-<a href="https://www.coursera.org/learn/nand2tetris2">Part II: Software course on Coursera</a>
-
-</li></ul>
-<p>
-We recommend reading through the first six chapters of the book and completing the associated projects. This will develop your understanding of the relationship between the architecture of the machine and the software that runs on it.
-</p>
-
-<p>
-In seeking simplicity and cohesiveness, Nand2Tetris trades off depth. In particular, two very important concepts in modern computer architectures are pipelining and memory hierarchy, but both are mostly absent from the text.
-</p>
-
-<div id="Computer Architecture-Resources-Computer Systems: A Programmer's Perspective"><h4 id="Computer Systems: A Programmer's Perspective" class="header"><a href="#Computer Architecture-Resources-Computer Systems: A Programmer's Perspective">Computer Systems: A Programmer's Perspective</a></h4></div>
-
-<p>
-Most courses go from chapter 1 to 6. Do <a href="https://www.cs.cmu.edu/~213/">this course</a>
 </p>
 </div>
   
