[RTGW] 04: some clarifications [skip ci]

--- a/src/Notes/ComputerScience/CG/RTGW/04.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04.html
@@ -135,6 +135,21 @@ normal (vectors)
 Each transformation is encoded by a \(4\)x\(4\) matrix. We multiply vertices that have three components, \((x, y, z)\), by this \(4\)x\(4\) matrix by adding a fourth component to each vertex called the Homogeneous coordinate.
 </p>
 
+<p>
+[This](<a href="https://jsantell.com/model-view-projection/)">https://jsantell.com/model-view-projection/)</a> article has a great visualization for each space: 
+</p>
+
+<ul>
+<li>
+World Space
+
+</li><li>
+Camera Space
+
+</li><li>
+Clip Space
+
+</li></ul>
 <div id="Camera-Vertex Transformations-Homogeneous Coordinates"><h3 id="Homogeneous Coordinates" class="header"><a href="#Camera-Vertex Transformations-Homogeneous Coordinates">Homogeneous Coordinates</a></h3></div>
 
 <p>
@@ -496,6 +511,8 @@ In such a case, the world would be translated 4 units on the positive z-axis, an
 <p>
 In such a case, the world would be moved 4 units on the negative z-axis and then the camera would be located at \([0, 0, 4]\) in the new world-coordinate system.
 </p>
+
+<div id="Camera-References"><h2 id="References" class="header"><a href="#Camera-References">References</a></h2></div>
 </div>
   
 
