[RTGW] 04: little fixes [skip ci]

--- a/src/Notes/ComputerScience/CG/RTGW/04.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04.html
@@ -104,6 +104,9 @@
 <a href="04.html#Camera%20Translation">Camera Translation</a>
 
 </li></ul>
+</li><li>
+<a href="04.html#References">References</a>
+
 </li></ul>
 <hr>
 
@@ -136,7 +139,7 @@ Each transformation is encoded by a \(4\)x\(4\) matrix. We multiply vertices tha
 </p>
 
 <p>
-[This](<a href="https://jsantell.com/model-view-projection/)">https://jsantell.com/model-view-projection/)</a> article has a great visualization for each space: 
+<a href="https://jsantell.com/model-view-projection">This</a> article has a great visualization for each space: 
 </p>
 
 <ul>
