--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -153,6 +153,9 @@ Applications of Trigonometry and Vectors
 <li>
 <a href="10_01.html">The Law of Sines</a>
 
+</li><li>
+<a href="10_02.html">The Law of Cosines and Area Formulas</a>
+
 </li></ol>
 </li></ol>
 </div>
