[AGAA] 10_04: fix typo [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/10_02.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/10_02.html
@@ -195,7 +195,7 @@ If two triangles exist, repeat Step 2 and 3
 Use the law of cosines to find the third side
 
 </li><li>
-Use the law of sines to find the smaller of the two remaining sides
+Use the law of sines to find the smaller of the two remaining angle
 
 </li><li>
 Use the angle sum formula to find the remaining angle
