[AGAA] Finish notes for 10_03 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -156,6 +156,9 @@ Applications of Trigonometry and Vectors
 </li><li>
 <a href="10_02.html">The Law of Cosines and Area Formulas</a>
 
+</li><li>
+<a href="10_03.html">Vectors and Their Applications</a>
+
 </li></ol>
 </li></ol>
 </div>
