--- a/src/Notes/Math/Pre-Calculus/AGAA/10_03.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/10_03.html
@@ -144,7 +144,7 @@ A vector with its initial point at the origin in a rectrangular coordinate syste
 </p>
 
 <p>
-Figure 27 shors the vector \(\textbf{u} = \langle a, b \rangle\). The positive angle between the x-axis and the position vector is called the <span id="Vectors and Their Applications-Interpretation of Vectors-direction angle"></span><strong id="direction angle">direction angle</strong> of the vector.
+Figure 27 shows the vector \(\textbf{u} = \langle a, b \rangle\). The positive angle between the x-axis and the position vector is called the <span id="Vectors and Their Applications-Interpretation of Vectors-direction angle"></span><strong id="direction angle">direction angle</strong> of the vector.
 </p>
 
 <p>
