[AGAA] Finish notes for 10_04 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -159,6 +159,9 @@ Applications of Trigonometry and Vectors
 </li><li>
 <a href="10_03.html">Vectors and Their Applications</a>
 
+</li><li>
+<a href="10_04.html">Trigonometric (Polar) Form of Complex Numbers</a>
+
 </li></ol>
 </li></ol>
 </div>
