[AGAA] 10_04 improve equations forma [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/10_04.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/10_04.html
@@ -168,11 +168,11 @@ If we multiply their trigonometric forms we obtain:
 \end{align}
 
 \begin{align}
-r \cdot n (\cos \theta + i \sin \theta)(\cos \phi + i \sin \phi)
+= r \cdot n (\cos \theta + i \sin \theta)(\cos \phi + i \sin \phi)
 \end{align}
 
 \begin{align}
-r \cdot n (\cos \theta \cdot \cos \phi + i \sin \theta \cdot \cos \phi + \cos \theta \cdot i \sin \phi + i^2 \sin \theta \cdot \sin \phi)
+= r \cdot n (\cos \theta \cdot \cos \phi + i \sin \theta \cdot \cos \phi + \cos \theta \cdot i \sin \phi + i^2 \sin \theta \cdot \sin \phi)
 \end{align}
 
 <p>
@@ -180,11 +180,11 @@ We know that \(i^2 = -1\), and we factor out \(i\).
 </p>
 
 \begin{align}
-r \cdot n (\cos \theta \cdot \cos \phi + (-1) \sin \theta \cdot \sin \phi + i (\sin \theta \cdot \cos \phi + \cos \theta \cdot \sin \phi))
+= r \cdot n (\cos \theta \cdot \cos \phi + (-1) \sin \theta \cdot \sin \phi + i (\sin \theta \cdot \cos \phi + \cos \theta \cdot \sin \phi))
 \end{align}
 
 \begin{align}
-r \cdot n (\cos \theta \cdot \cos \phi - \sin \theta \cdot \sin \phi + i (\sin \theta \cdot \cos \phi + \cos \theta \cdot \sin \phi))
+= r \cdot n (\cos \theta \cdot \cos \phi - \sin \theta \cdot \sin \phi + i (\sin \theta \cdot \cos \phi + \cos \theta \cdot \sin \phi))
 \end{align}
 
 <p>
@@ -192,7 +192,7 @@ Given \(\cos \theta \cdot \cos \phi - \sin \theta \cdot \sin \phi = \cos (\theta
 </p>
 
 \begin{align}
-r \cdot n (\cos (\theta + \phi) + i \sin (\theta + \phi))
+= r \cdot n (\cos (\theta + \phi) + i \sin (\theta + \phi))
 \end{align}
 
 <p>
@@ -200,7 +200,7 @@ In compact form this is written:
 </p>
 
 \begin{align}
-r \cdot n \text{cis} (\theta + \phi)
+= r \cdot n \text{cis} (\theta + \phi)
 \end{align}
 
 <div id="Trigonometric (Polar) Form of Complex Numbers-Quotient Theorem"><h2 id="Quotient Theorem" class="header"><a href="#Trigonometric (Polar) Form of Complex Numbers-Quotient Theorem">Quotient Theorem</a></h2></div>
