Finish 10_05 notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -162,6 +162,9 @@ Applications of Trigonometry and Vectors
 </li><li>
 <a href="10_04.html">Trigonometric (Polar) Form of Complex Numbers</a>
 
+</li><li>
+<a href="10_05.html">Powers and Roots of Complex Numbers</a>
+
 </li></ol>
 </li></ol>
 </div>
