[AGAA] 10_05 some fixes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/10_05.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/10_05.html
@@ -65,15 +65,15 @@ r(\cos \theta + i \sin \theta)^2 = [r(cos \theta + i \sin \theta)][r(cos \theta 
 \end{align}
 
 <p>
-By the prodcut theorem:
+By the <a href="10_04.html#Produc%20Theorem">complex number product theorem</a>:
 </p>
 
 \begin{align}
-= r^2 [r(cos (\theta + \theta) + i \sin (\theta + \theta))]
+= r^2 [cos (\theta + \theta) + i \sin (\theta + \theta)]
 \end{align}
 
 \begin{align}
-= r^2 (cos 2\theta + i \sin 2 \theta)
+= r^2 (\cos 2\theta + i \sin 2 \theta)
 \end{align}
 
 <p>
@@ -85,7 +85,7 @@ If \(r(\cos \theta + i \sin \theta)\) is a complex number and \(n\) is any posit
 </p>
 
 \begin{align}
-[r(\cos \theta + i \sin \theta)]^n = r^n (cos n\theta + i \sin n\theta)
+[r(\cos \theta + i \sin \theta)]^n = r^n (\cos n\theta + i \sin n\theta)
 \end{align}
 
 <p>
@@ -93,13 +93,13 @@ In compact form:
 </p>
 
 \begin{align}
-[r(\text{cis} \theta]^n = r^n \text{cis} n\theta
+[r\text{ cis} \theta]^n = r^n \text{ cis } n\theta
 \end{align}
 
 <div id="Power and Roots of Complex Numbers-Roots of Complex Numbers"><h2 id="Roots of Complex Numbers" class="header"><a href="#Power and Roots of Complex Numbers-Roots of Complex Numbers">Roots of Complex Numbers</a></h2></div>
 
 <p>
-For a positive integer \(n\), the complex number \(a + bi\) ai an \(n\)<span id="Power and Roots of Complex Numbers-Roots of Complex Numbers-th root"></span><strong id="th root">th root</strong> of the complex number \(x + yi\) if the following holds:
+For a positive integer \(n\), the complex number \(a + bi\) an \(n\)<span id="Power and Roots of Complex Numbers-Roots of Complex Numbers-th root"></span><strong id="th root">th root</strong> of the complex number \(x + yi\) if the following holds:
 </p>
 
 \begin{align}
@@ -109,7 +109,7 @@ For a positive integer \(n\), the complex number \(a + bi\) ai an \(n\)<span id=
 <div id="Power and Roots of Complex Numbers-Roots of Complex Numbers-Finding the Roots of Complex Numbers"><h3 id="Finding the Roots of Complex Numbers" class="header"><a href="#Power and Roots of Complex Numbers-Roots of Complex Numbers-Finding the Roots of Complex Numbers">Finding the Roots of Complex Numbers</a></h3></div>
 
 <p>
-To fin the three complex cube roots of \(8(\cos 135º + i \sin 135º)\) we look for a comple number, \(r(\cos \alpha + i \sin \alpha)\) that satisfies:
+To find the three complex cube roots of \(8(\cos 135º + i \sin 135º)\) we look for a comple number, \(r(\cos \alpha + i \sin \alpha)\) that satisfies:
 </p>
 
 \begin{align}
@@ -185,11 +185,11 @@ If \(n\) is a positive integer, \(r\) is a positive real number and \(\theta\) i
 </p>
 
 \begin{align}
-\sqrt[n]{x} (\cos \alpha + i \sin \alpha)
+\sqrt[n]{r} (\cos \alpha + i \sin \alpha)
 \end{align}
 
 \begin{align}
-\sqrt[n]{x} \text{cis} \alpha
+\sqrt[n]{r} \text{ cis } \alpha
 \end{align}
 
 <p>
