--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -165,6 +165,9 @@ Applications of Trigonometry and Vectors
 </li><li>
 <a href="10_05.html">Powers and Roots of Complex Numbers</a>
 
+</li><li>
+<a href="10_06.html">Polar Equations and Graphs</a>
+
 </li></ol>
 </li></ol>
 </div>
