[AGAA] 10_06: minor fixes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/10_06.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/10_06.html
@@ -116,7 +116,7 @@ r^2 = x^2 + y^2
 \end{align}
 
 <p>
-Note that a point in the plane can only have one pair of rectangular coordinates, however this same point can have infinitely many pairs of polar coordinates. For example \((2, 30º) = (2, 390º) = (2, -330º) = (-2, 210º) = cdots\) (see Figure 62).
+Note that a point in the plane can only have one pair of rectangular coordinates, however this same point can have infinitely many pairs of polar coordinates. For example \((2, 30º) = (2, 390º) = (2, -330º) = (-2, 210º) = \cdots\) (see Figure 62).
 </p>
 
 <p>
@@ -166,7 +166,7 @@ r^2 = a^2
 \end{align}
 
 \begin{align}
-r = \sqrt{a^2} = \pm a
+r = \pm \sqrt{a^2} = \pm a
 \end{align}
 
 <div id="Polar Equations and Graphs-Classifying Polar Equations"><h2 id="Classifying Polar Equations" class="header"><a href="#Polar Equations and Graphs-Classifying Polar Equations">Classifying Polar Equations</a></h2></div>
