[AGAA] 10_07: finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -168,6 +168,9 @@ Applications of Trigonometry and Vectors
 </li><li>
 <a href="10_06.html">Polar Equations and Graphs</a>
 
+</li><li>
+<a href="10_07.html">More Parametric Equations</a>
+
 </li></ol>
 </li></ol>
 </div>
